syntax = "proto3";

option csharp_namespace = "NambaDoctor.Proto.v1";

package nambadoctor.v1;

service ReportWorkerV1{
	rpc GetAllPatientReports(ReportPatRequest) returns (MultipleReports);
	rpc GetReportsOfAppointment(ReportRequest) returns (MultipleReports);
	rpc UploadNewReport(ReportUploadObject) returns (MediaName);
	rpc DownloadReportMedia(MediaName) returns (MediaStream);
}

message ReportUploadObject{
	string Id = 1;
	string Name = 2;
	string AppointmentId = 3;
	string PatientId = 4;
	bytes MediaFile = 5;
	string FileType = 6;
}

message ReportDownloadObject{
	string Id = 1;
	string Name = 2;
	string AppointmentId = 3;
	string PatientId = 4;
	int64 CreatedDateTime = 5;
	string FileType = 6;
}

message MediaName{
	string Name = 1;
}

message MediaStream{
	bytes MediaFile = 1;
}

message MultipleReports{
	repeated ReportDownloadObject Reports = 1;
}

message ReportRequest{
	string AppointmentId = 1;
}

message ReportPatRequest{
	string PatientId =1;
}